# auto-clicker

./: README.md  pyproject.toml
auto_clicker/: main.py
